# sources

./: README.md  Source-tutorial.txt  pyproject.toml  setup.cfg  setup.py
repo/: example-package.recipe
repo/binutils-pass1/: binutils-pass1.recipe
repo/gcc-pass1/: recipe.yaml
source/: source.conf
source/modules/: auto.py  auto1.py  binpkg.py  build.py  cache.py  cli.py  config.py  deepclean.py  fakeroot.py  flags.py  generator.py  graph.py  hash.py  history.py  hooks.py  info.py  logger.py  overlay.py  query.py  recipe.py  remove.py  resolver.py  sandbox.py  search.py  source  sync.py  upgrade.py  utils.py  verify.py
