[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "source-pm"
version = "0.1.0"
description = "Gerenciador de pacotes Linux baseado em recipes."
readme = "README.md"
authors = [
    { name="Seu Nome", email="seu@email.com" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0"
]

[project.scripts]
source = "source.source:main"
