[metadata]
name = source-pm
version = 0.1.0
description = Gerenciador de pacotes Linux baseado em recipes
long_description = file: README.md
long_description_content_type = text/markdown
author = Seu Nome
license = GPL-3.0
platforms = any

[options]
packages = find:
python_requires = >=3.8
install_requires =
    rich>=13.0.0

[options.entry_points]
console_scripts =
    source = source.source:main
